curso-k8s/labs/lab12-ingress/lab1/ingress-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app-deployment
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo VERSION 1.0 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  labels:
    app: backend
spec:
  type: ClusterIP 
  selector:
    app: backend 
  ports:
  - name: web-app-svc-port
    protocol: TCP
    port: 8080 
    targetPort: 80


#
#  Segunda aplicación para usar 2 distintas
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        command: ["sh", "-c", "echo soy app2 desde $HOSTNAME > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"]
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  labels:
    app: api
spec:
  type: ClusterIP 
  selector:
    app: api 
  ports:
  - name: api-svc-port
    protocol: TCP
    port: 9090 
    targetPort: 80
