curso-k8s/labs/lab12-ingress/lab1/ingress-rules-hostheader.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-app-ingr-rules
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: minikube.domain.com
    http:
      paths:
      - pathType: Exact
        path: "/undefined"
        backend:
          service:
            name: web-app-svc
            port:
              number: 8080
      - pathType: Exact
        path: "/api"
        backend:
          service:
            name: api-svc
            port:
              number: 9090
  - host: api.domain.com
    http:
      paths:
      - pathType: Exact
        path: "/api"
        backend:
          service:
            name: api-svc
            port:
              number: 9090
